--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "imagekitio-next": "^1.0.1",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
